fix(global): improve contrast for text selection

--- a/github.user.styl
+++ b/github.user.styl
@@ -1158,7 +1158,7 @@ for c, i in colors[2..length(colors)] {
     html {
         c: 0 0 bg0
 
-        ::selection { c: 0 0 bg4 }
+        ::selection { c: 0 0 bg5 }
         ::placeholder { c: fg4 }
         hr { border-color: bg5 }
 
